=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.2
 - Fixed: [ 2820278 ] Changes vanish (wooc)
 - Fixed: [ 2820508 ] [SVN:5891] famid not propogating to report (fisharebest)
 - Fixed: [ 2815875 ] Theme-related problems in Opera (volschin)
 - Added: [ 2798575 ] clustrmaps support similar to googlemaps. Enable
   by adding define('PGV_CLUSTRMAPS', 'your website address'); to your
   config.php (sridharb)
 - Fixed: [ 2816347 ] XHTML - family_nav.php (windmillway)
 - Fixed: [ 2815546 ] Timeline Chart display issue (wooc)
 - Added: [ 2812244 ] List branches by surname (opus27)
 - Fixed: [ 2811443 ] [5774] Double helping of tables (fisharebest)
 - Fixed: [ 2806853 ] Minor error in faq.php css classes (fisharebest)
 - Fixed: [ 2579268 ] Nonexistent != Private != blank (wooc)
 - Fixed: [ 2807477 ] Minor tweaks to gedcheck.php (fisharebest/kiwi_pgv)
 - Fixed: [ 2806749 ] Cache needs to be cleared when changing theme (canajun2eh)
 - Fixed: [ 2806364 ] Typo in functions_mediadb.php (wgroleau)
 - Fixed: [ 2806055 ] Incorrect calc - "Person who lived longest" (fisharebest)
 - Fixed: [ 2578740 ] Indilist Mother's name wrong (fisharebest)
 - Fixed: [ 2801382 ] Fatal error: Uncaught exception 'PDOException'  (windmillway)
 - Added: [ 2741685 ] SQL Version Update (fisharebest)
 - Fixed: [ 1479083 ] 4b07 - malformed links generated (fisharebest)
 - Fixed: [ 1767948 ] FAQ header doesn't like quotes upon edit (fisharebest)
 - Fixed: [ 2231897 ] [416pre] - Add GEDCOM ... Default person (fisharebest)
 - Fixed: [ 1783041 ] (4.1)  Unable to find record with ID (fisharebest)
 - Changed: Fixed error occurring in inverselink.php, Changed "add" simplyxxx theme icons for clarity, small language change (windmillway)
 - Added [ 1209782 ] Top Down pedigree tree (wooc)